# rest-blog

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
blog/: admin.py  models.py  serializers.py
blog/migrations/: 0001_initial.py  0002_alter_blog_published_at_comment.py
blog/tests/: model_test.py  view_test.py
blog/urls/: api_urls.py  generics_urls.py  view_set_urls.py
blog/views/: api_view_set_views.py  api_views.py  generics_views.py  views.py
config/: local.py  prod.py  schema.py  settings.py  urls.py
user/: serializers.py  views.py
utills/: jwt_serializers.py
